mbuffer (20141125-1) UNRELEASED; urgency=medium

  * New upstream release:
    - remove the 10-manpage-dashes, 12-path-max and 14-autoconf patches,
      integrated upstream
    - update the 11-typos patch

 -- Peter Pentchev <roam@ringlet.net>  Wed, 26 Nov 2014 19:54:19 +0200

mbuffer (20140310-3) unstable; urgency=medium

  * Add the 15-sigaction patch to initialize all the relevant fields
    in the sigaction structure.  This satisfies the stricter
    requirements of the FreeBSD kernel used in kfreebsd-*.
    Thanks, Bernhard Übelacker <bernhardu@vr-web.de> and
    Alexander Dahl <post@lespocky.de>.  Closes: #770005

 -- Peter Pentchev <roam@ringlet.net>  Wed, 19 Nov 2014 02:09:59 +0200

mbuffer (20140310-2) unstable; urgency=medium

  * Use dh-autoreconf *and* autotools-dev so that config.sub/guess are
    still updated, even as the package doesn't use automake.
    Thanks to Peter Michael Green <plugwash@debian.org>.
    Closes: #766734.
  * Add --parallel to the debhelper invocation.

 -- Peter Pentchev <roam@ringlet.net>  Sat, 25 Oct 2014 21:14:50 +0300

mbuffer (20140310-1) unstable; urgency=medium

  * Fix the watch file: support both absolute and relative links.
  * Remove the obsolete DM-Upload-Allowed source control field.
  * Bump the debhelper compatibility version to 9:
    - get the build hardening flags directly from debhelper
    - drop the dpkg-dev versioned dependency (for dpkg-buildflags),
      long satisfied even in oldstable
  * Drop the version in the autotools-dev build dependency.
  * Drop the source compression options; dpkg-dev's defaults are good enough.
  * Switch the copyright file to the final version of the 1.0 specification
    and bump the year of my debian/* copyright notice.
  * Bump Standards-Version to 3.9.6 with no changes.
  * Mark the binary package as Multi-Arch: foreign.
  * Add a debian/upstream/metadata file.
  * Switch the Vcs-* fields to the full-source Git repository.
  * New upstream release: